# gnuplot

./: .editorconfig  .gitattributes  .gitignore  00test  0BUGS  0CONFIG  0FAQ  0INSTALL  0PORTING  0README  3b1.dem  ANNOUNCE-MOUSE  BUGS  ChangeLog  ChangeLog.0  ChangeLog.1  ChangeLog.2  ChangeLog.3  ChangeLog.4  ChangeLog.5  CodeStyle  Copyright  DIR  EPSView.h  EPSView.m  EpsViewer.h  EpsViewer.m  FAQ  History  INSTALL  Intergraph.x11  Makefile  Makefile.am  Makefile.ami  Makefile.in  Makefile.maint  NEWS  PATCHLEVEL  PGPKEYS  PORTING  (+427 more)
config/: .gitignore  Makefile.am  Makefile.am.in  Makefile.in  README  buildvms.com  config.amg  config.cyg  config.dj2  config.mgw  config.nt  config.os2  config.oww  config.wc  configh_strip4compare.sh  makefile.286  makefile.amg  makefile.ami  makefile.cyg  makefile.dj2  makefile.djg  makefile.emx  makefile.g  makefile.mgw  makefile.msc  makefile.msw  makefile.mto  makefile.nt  makefile.os2  makefile.os9  makefile.oww  makefile.st  makefile.tc  makefile.unx  makefile.vms  makefile.wc  makefile.win  makefile.ztc  term_pc.h
config/MacOSX/: ReadMe.rtf  createdist.sh  gnuplot.packproj
config/cygwin/: .gitignore  Makefile
config/djgpp/: .gitignore  Makefile  config.h
config/mingw/: .gitignore  Makefile
config/msvc/: .gitignore  Makefile
config/watcom/: .gitignore  Makefile
demo/: .gitignore  3Dboxes.dem  3dboxes.dem  4D-data.dem  BesselJ.dem  BesselK.dem  Dawson.dem  Fresnel.dem  Makefile.am  Makefile.am.in  Makefile.in  TaBr.dem  airfoil.dem  all.dem  animate.dem  animate2.dem  animation.dem  approximate.dem  argb_hexdata.dem  armillary.dem  array.dem  array_index.dem  arrows.dem  arrowstyle.dem  autoscale.dem  azimuth.dem  barchart_art.dem  binary.dem  bins.dem  bivariat.dem  borders.dem  boxclusters.dem  boxes3d.dem  boxplot.dem  break_continue.dem  callargs.dem  candlesticks.dem  cerf.dem  chi_shapes.dem  circles.dem  (+213 more)
demo/games/: nibbles.dem  xixit.dem
demo/html/: Makefile  Makefile.canvas  animation.gp  animation.html  animation.html.save  canvas_utf8.dem  gnuplot.css  gnuplot_demo.css  index.6new  index.canvas  index.save  index.special_functions  linkedaxes.patch  mousebox.template  webify.pl  webify_canvas.pl  webify_svg.pl
demo/plugin/: Makefile  Makefile.am  README  demo_plugin.c  gnuplot_plugin.h  uigamma_plugin.c
docs/: .gitignore  Makefile.am  Makefile.in  README  README.ja  allterm-ja.h  checkdoc.c  doc2gih.c  doc2hlp.c  doc2html.c  doc2info.c  doc2ipf.c  doc2ms.c  doc2rnh.c  doc2rtf.c  doc2tex.c  doc2texi.el  doc2texi.pl  doc2web.c  doc2x.h  faq-ja.tex  fixinfo.el  gnuplot-ja.doc  gnuplot.1  gnuplot.doc  gnuplot.texi  gpcard.tex  lasergnu.1  makefile  makefile.ami  makefile.dst  pdffigures.tex  plotstyles.gnu  plotstyles_cvt.cmd  ps_guide.ps  term-ja.diff  termdoc.c  title-ja.tex  titlepag.ipf  titlepag.ms  (+5 more)
docs/html/: .gitignore  gnuplot_docs.css
docs/latextut/: Makefile.in  eg2.plt  eg3.plt  eg5.plt  header.tex  makefile.dst  tutorial.tex
docs/old/: ChangeLog  ChangeLog.1  ChangeLog.2  ChangeLog.old  CodeStyle  History.old  PORTING  README.3d  README.3p4  README.3p5  README.ami  README.emx  README.fit  README.internals  README.iso  README.mf  README.nex  README.os2  README.pro  README.win  README.xli  gpcard.tex  makefile.r
docs/ps/: Makefile  ps_guide.ps
docs/psdoc/: .gitignore  Makefile  README  ps_fontfile_doc.tex  ps_guide.ps  ps_symbols.gpi
docs/windows/: .gitignore  doc2html.c
lisp/: .gitignore  ChangeLog  Makefile.am  Makefile.dst  Makefile.in  README  README.1st  acinclude.m4  aclocal.m4  configure  configure.in  gnuplot-gui.el  gnuplot.el  gpelcard.tex
lisp/old/: gnuplot.el
m4/: Makefile.am  Makefile.am.in  Makefile.in  alpha.m4  apple.m4  beos.m4  msdos.m4  next.m4  path-hdr.m4  path-lib.m4  pkg.m4  search-hdr.m4  search-lib.m4  select-types.m4  select.m4  stringize.m4
man/: Makefile.am  Makefile.in  gnuplot-ja.1  gnuplot-ja.SJIS  gnuplot-ja_JP.UTF-8  gnuplot-ja_JP.eucJP  gnuplot.1
man/ja/: Makefile.am
man/man1/: gnuplot.1
share/: Gnuplot.app-defaults  Makefile.am  colors_mono.gp  gnuplotrc
share/LaTeX/: .gitignore  Makefile  Makefile.am  README  gnuplot-lua-tikz.sty
src/: .gitignore  Makefile.am  Makefile.in  Makefile.maint  README  alloc.c  alloc.h  amiga.c  amos_airy.c  amos_airy.h  ansi2knr.c  ansichek.h  axis.c  axis.h  bf_test.c  bin_hook.c  binary.c  binary.h  bitmap.c  bitmap.h  boundary.c  boundary.h  breaders.c  breaders.h  color.c  color.h  command.c  command.h  commitvers  complexfun.c  complexfun.h  contour.c  contour.h  corgraph.asm  corplot.c  datablock.c  datablock.h  datafile.c  datafile.h  depcomp  (+129 more)
src/NeXT/: Controller.m  GnuView.m
src/OpenStep/: Controller.h  Controller.m  GnuTerm_main.m  GnuView.m  GnuViewController.m
src/beos/: GPApp.h  GPBitmap.h  GPView.h  GPWindow.h  Makefile  Makefile.in
src/os2/: .editorconfig  .gitignore  4allterm.cmd  dialogs.c  dialogs.h  gclient.c  gnupmdrv.c  gnupmdrv.def  gnupmdrv.dlg  gnupmdrv.h  gnupmdrv.ipf  gnupmdrv.rc  pm_msgs.h  print.c
src/qtterminal/: .editorconfig  .gitignore  Makefile.am  QtGnuplot.pro  QtGnuplotApplication.cpp  QtGnuplotApplication.h  QtGnuplotEvent.cpp  QtGnuplotEvent.h  QtGnuplotInstance.cpp  QtGnuplotInstance.h  QtGnuplotItems.cpp  QtGnuplotItems.h  QtGnuplotScene.cpp  QtGnuplotScene.h  QtGnuplotSettings.ui  QtGnuplotWidget.cpp  QtGnuplotWidget.h  QtGnuplotWindow.cpp  QtGnuplotWindow.h  README.Qt  embed_example.cpp  embed_example.h  gnuplot_qt.cpp  qt_conversion.cpp  qt_embed_example.cpp  qt_embed_example.h  (+3 more)
term/: .editorconfig  Makefile.am  Makefile.am.in  Makefile.in  README  aed.trm  aglfn.h  ai.trm  amiga.trm  apollo.trm  aquaterm.trm  atariaes.trm  atarivdi.trm  be.trm  block.trm  caca.trm  cairo.trm  canvas.trm  cgi.trm  cgm.trm  compact.c  context.trm  corel.trm  debug.trm  djsvga.trm  driver.h  dumb.trm  dxf.trm  dxy.trm  eepic.trm  emf.trm  emxvga.trm  epslatex.trm  epson.trm  estimate.trm  excl.trm  fg.trm  fig.trm  gd.trm  ggi.trm  (+67 more)
tutorial/: .gitignore  Makefile.am  Makefile.am.in  Makefile.in  eg2.plt  eg4.plt  eg6.plt  eg7.plt  header.tex  linepoin.plt  tutorial.tex
(+150 files in other folders)
